--- a/src/components/BannerMain/BannerMain.css
+++ b/src/components/BannerMain/BannerMain.css
@@ -1,3 +1,4 @@
+
 .banner_main{
     position: absolute;
     width: 1360px;
@@ -15,6 +16,8 @@
     flex-direction: column;
     width: 664px;
     color: rgba(245, 245, 245, 1);
+    background-color: transparent;
+    justify-content: center;
 }
 
 .subtitle{
@@ -25,6 +28,7 @@
     letter-spacing: 0em;
     text-align: left;
     margin-bottom: 15px;
+    background-color: transparent;
 }
 
 .info_general{
@@ -36,4 +40,5 @@
     text-align: left;
     width: 661px;
     height: 110px;
+    background-color: transparent;
 }
