--- a/src/components/Formulario/Formulario.css
+++ b/src/components/Formulario/Formulario.css
@@ -4,7 +4,7 @@
 }
 
 .form{    
-    width: 1360px;
+    width: 90%;
 }
 .tituloForm{
     font-size: 60px;
@@ -22,4 +22,8 @@
     border-bottom-color: 'white'; 
     width: 100%;
       
+}
+
+.campo{
+    margin: 25px 0;
 }
